force-app/main/default/objects/Stock_Request__c/Stock_Request__c.object-meta.xml
<CustomObject>
    <label>Stock Request</label>
    <nameField>
        <displayFormat>REQ-{0000}</displayFormat>
        <label>Stock Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>