force-app/main/default/objects/Stock_Request__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Stock Requests</relationshipLabel>
    <relationshipName>Stock_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>