force-app/main/default/objects/Stock_Request__c/fields/CompanyId__c.field-meta.xml
<CustomField>
    <fullName>CompanyId__c</fullName>
    <formula>TEXT( Route__r.CompanyId__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Id</label>
    <type>Text</type>
</CustomField>