force-app/main/default/objects/Stock_Request__c/fields/Godown_Manager__c.field-meta.xml
<CustomField>
    <fullName>Godown_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Godown Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stock_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>