force-app/main/default/objects/Stock_Request__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Stock Requests</relationshipLabel>
    <relationshipName>Stock_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>