force-app/main/default/objects/Stock_Request__c/fields/Stock_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Stock_Request_Id__c</fullName>
    <displayFormat>REQ-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Stock Request Id</label>
    <type>AutoNumber</type>
</CustomField>