force-app/main/default/objects/Stock_Request__c/fields/Trip__c.field-meta.xml
<CustomField>
    <fullName>Trip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trip</label>
    <referenceTo>Trip__c</referenceTo>
    <relationshipLabel>Stock Requests</relationshipLabel>
    <relationshipName>Stock_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>