force-app/main/default/objects/Stock_Request__c/fields/vehicle_crew__c.field-meta.xml
<CustomField>
    <fullName>vehicle_crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>vehicle crew</label>
    <referenceTo>vehicle_crew__c</referenceTo>
    <relationshipLabel>Stock Requests</relationshipLabel>
    <relationshipName>Stock_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>