force-app/main/default/objects/Stock_Request__c/fields/Vehicle_Id__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Id__c</fullName>
    <formula>Vehicle__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Id</label>
    <type>Text</type>
</CustomField>