force-app/main/default/objects/Stock_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Branch__c</columns>
    <columns>Route__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Warehouse_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sent_to_SAP__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>