force-app/main/default/objects/Stock_Request__c/listViews/TODAY.listView-meta.xml
<ListView>
    <fullName>TODAY</fullName>
    <columns>NAME</columns>
    <columns>Branch__c</columns>
    <columns>Route__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Warehouse_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>TODAY</label>
</ListView>